[package]
name = "pza-toolkit"
version = "0.1.0"
authors = ["XdoctorwhoZ <xavier.rodriguezalvarez@gmail.com>"]
edition = "2021"
description = "Panduza Toolkit"


[dependencies]
# 
dirs = "6.0.0"
# ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json5 = "0.2.1"                                                       # JSON5 configuration format
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# ---
# Random string generator
rand = "0.8.5"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tracing = "0.1.41"
thiserror = "2.0.16"
async-trait = "0.1.89"
# ---
# MQTT async client
rumqttc = "0.25.0"
# ---
# MQTT Broker
rumqttd = { git = "https://github.com/Panduza/rumqtt", tag = "0.1.0" }
# ---
# Config for rumqttd
config = "0.15.17"
# ---
bytes = "1.10.1"
regex = "1.12.2"
# ---
