[package]
name = "pza-toolkit"
version = "0.1.1"
authors = ["XdoctorwhoZ <xavier.rodriguezalvarez@gmail.com>"]
edition = "2021"
description = "Panduza Toolkit"

[dependencies]
# ---
# Error handling
anyhow = "1.0.100"
# ---
# Async trait for async/await in traits
async-trait = "0.1.89"
# ---
# Byte buffer utilities
bytes = "1.10.1"
# ---
# Configuration loader for rumqttd
config = "0.15.17"
# ---
# Directory handling
dirs = "6.0.0"
# ---
# Random string generator
rand = "0.8.5"
# ---
# Regex utilities
regex = "1.12.2"
# ---
# MQTT async client
rumqttc = "0.25.0"
# ---
# MQTT Broker
rumqttd = { git = "https://github.com/Panduza/rumqtt", tag = "0.1.0" }
# ---
# Serialization framework
serde = { version = "1.0", features = ["derive"] }
# ---
# JSON serialization
serde_json = "1.0"
# ---
# JSON5 configuration format
serde_json5 = "0.2.1"
# ---
# Tokio async runtime
tokio = { version = "1.43.0", features = ["full", "tracing"] }
# ---
# Tracing for async code
tracing = "0.1.41"
# ---
# Tracing subscriber for logging
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# ---
# Error type derivation
thiserror = "2.0.16"
# ---
